<resources>
    <string name="app_name">laba3</string>
    <string name="act1">Activity 1</string>
    <string name="act2">Activity 2</string>
    <string name="fon">Малов В. Д. БОМ41ПИА</string>
    <string name="hint">Введите имя</string>
    <string name="btn">Далее</string>
    <string name="input">Вы ввели:</string>
    <string name="forward">Вперёд</string>
    <string name="back">Назад</string>
    <string name="google">Искать в Google</string>
    <string name="share">Поделиться</string>
    <string name="u_input">Вы ввели</string>
</resources>